--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,9 @@ keep_files:
 # Site settings
 title: Airspace
 subtitle: "A free HTML5 agency template"
-url: "https://besaru.github.io/" # the base hostname & protocol for your site
+url: "http://saludzen.000webhostapp.com" # the base hostname & protocol for your site
 # baseurl: "/the/subpath/of/your/site" # Set this value to "" if you want your site to be root
-baseurl: 'pruebaspublicacion.github.io'
+baseurl: ''
 cover: "/assets/cover.png"
 logo: "/assets/logo.png"
 
